feat: add rainbow styling

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1 class="title">Krauss Haus</h1>
     </header>
     <main class="menu-container">
-        <a href="/summer-menu" class="menu-link" aria-label="View Summer Menu">Summer Menu</a>
-        <a href="/tiki-menu" class="menu-link" aria-label="View Tiki Menu">Tiki Menu</a>
-        <a href="/winter-menu" class="menu-link" aria-label="View Winter Menu">Winter Menu</a>
+        <a href="/summer-menu" class="menu-link" aria-label="View Summer Menu"><span>Summer Menu</span></a>
+        <a href="/tiki-menu" class="menu-link" aria-label="View Tiki Menu"><span>Tiki Menu</span></a>
+        <a href="/winter-menu" class="menu-link" aria-label="View Winter Menu"><span>Winter Menu</span></a>
     </main>
 </body>
 </html>
