chore: add real menu links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1 class="title">Krauss Haus</h1>
     </header>
     <main class="menu-container">
-        <a href="/summer-menu" class="menu-link" aria-label="View Summer Menu"><span>Summer Menu</span></a>
-        <a href="/tiki-menu" class="menu-link" aria-label="View Tiki Menu"><span>Tiki Menu</span></a>
-        <a href="/winter-menu" class="menu-link" aria-label="View Winter Menu"><span>Winter Menu</span></a>
+        <a href="https://drive.google.com/file/d/1V1gGvneFkKRhT-7z9bADC0jlcfReEwj8/view?usp=drive_link" class="menu-link" aria-label="View Summer Menu" target="_blank" rel="noopener noreferrer"><span>Summer Menu</span></a>
+        <a href="https://drive.google.com/file/d/1-87w5Ons8AHVvtro2dxcOVGz_YP9ilCC/view?usp=drive_link" class="menu-link" aria-label="View Tiki Menu" target="_blank" rel="noopener noreferrer"><span>Tiki Menu</span></a>
+        <a href="https://drive.google.com/file/d/1yX5_TK5hSTsWRrqugowlTgp31yTKEAmm/view?usp=drive_link" class="menu-link" aria-label="View Winter Menu" target="_blank" rel="noopener noreferrer"><span>Winter Menu</span></a>
     </main>
 </body>
 </html>
