--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Krauss Haus - A digital hub for guests featuring seasonal cocktail menus">
+    <meta name="keywords" content="cocktails, menu, Krauss Haus, seasonal drinks, tiki drinks">
+    <meta name="author" content="The Krauss Haus">
+    <meta name="robots" content="index, follow">
     <title>The Krauss Haus</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thekrausshaus.com/">
+    <meta property="og:title" content="The Krauss Haus">
+    <meta property="og:description" content="A digital hub for guests featuring seasonal cocktail menus">
+    <meta property="og:image" content="https://thekrausshaus.com/images/og-image.jpg">
+    <meta property="og:site_name" content="The Krauss Haus">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://thekrausshaus.com/">
+    <meta name="twitter:title" content="The Krauss Haus">
+    <meta name="twitter:description" content="A digital hub for guests featuring seasonal cocktail menus">
+    <meta name="twitter:image" content="https://thekrausshaus.com/images/og-image.jpg">
+    <meta name="twitter:creator" content="@thecodeboss">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
+    <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Krauss Haus" />
+    <link rel="manifest" href="/images/favicon/site.webmanifest" />
 </head>
 <body>
     <header class="header" role="banner">
