feat: add PDFs locally instead of through gdrive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://thekrausshaus.com/">
     <meta property="og:title" content="The Krauss Haus">
     <meta property="og:description" content="A digital hub for guests featuring seasonal cocktail menus">
-    <meta property="og:image" content="https://thekrausshaus.com/images/og-image.jpg">
+    <meta property="og:image" content="https://thekrausshaus.com/assets/images/og-image.jpg">
     <meta property="og:site_name" content="The Krauss Haus">
     <meta property="og:locale" content="en_US">
 
@@ -23,19 +23,19 @@
     <meta name="twitter:url" content="https://thekrausshaus.com/">
     <meta name="twitter:title" content="The Krauss Haus">
     <meta name="twitter:description" content="A digital hub for guests featuring seasonal cocktail menus">
-    <meta name="twitter:image" content="https://thekrausshaus.com/images/og-image.jpg">
+    <meta name="twitter:image" content="https://thekrausshaus.com/assets/images/og-image.jpg">
     <meta name="twitter:creator" content="@thecodeboss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
-    <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/assets/images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Krauss Haus" />
-    <link rel="manifest" href="/images/favicon/site.webmanifest" />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
 </head>
 <body>
     <header class="header" role="banner">
@@ -44,21 +44,21 @@
     </header>
     <main class="menu-container" role="main">
         <nav aria-label="Menu Navigation">
-            <a href="https://drive.google.com/file/d/1V1gGvneFkKRhT-7z9bADC0jlcfReEwj8/view?usp=drive_link"
+            <a href="/assets/pdfs/summer-menu.pdf"
                class="menu-link"
                aria-label="View Summer Menu"
                target="_blank"
                rel="noopener noreferrer">
                 <span>Summer Menu</span>
             </a>
-            <a href="https://drive.google.com/file/d/1-87w5Ons8AHVvtro2dxcOVGz_YP9ilCC/view?usp=drive_link"
+            <a href="/assets/pdfs/tiki-menu.pdf"
                class="menu-link"
                aria-label="View Tiki Menu"
                target="_blank"
                rel="noopener noreferrer">
                 <span>Tiki Menu</span>
             </a>
-            <a href="https://drive.google.com/file/d/1yX5_TK5hSTsWRrqugowlTgp31yTKEAmm/view?usp=drive_link"
+            <a href="/assets/pdfs/winter-menu.pdf"
                class="menu-link"
                aria-label="View Winter Menu"
                target="_blank"
