refactor: don't open links in new tabs

--- a/index.html
+++ b/index.html
@@ -46,23 +46,17 @@
         <nav aria-label="Menu Navigation">
             <a href="/assets/pdfs/summer-menu.pdf"
                class="menu-link"
-               aria-label="View Summer Menu"
-               target="_blank"
-               rel="noopener noreferrer">
+               aria-label="View Summer Menu">
                 <span>Summer Menu</span>
             </a>
             <a href="/assets/pdfs/tiki-menu.pdf"
                class="menu-link"
-               aria-label="View Tiki Menu"
-               target="_blank"
-               rel="noopener noreferrer">
+               aria-label="View Tiki Menu">
                 <span>Tiki Menu</span>
             </a>
             <a href="/assets/pdfs/winter-menu.pdf"
                class="menu-link"
-               aria-label="View Winter Menu"
-               target="_blank"
-               rel="noopener noreferrer">
+               aria-label="View Winter Menu">
                 <span>Winter Menu</span>
             </a>
         </nav>
