--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,51 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		%sveltekit.head%
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
+		<title>The Krauss Haus</title>
+		<meta name="description" content="Our house bar menus! Come have a drink with us." />
+		<meta name="keywords" content="cocktails, menu, Krauss Haus, seasonal drinks, tiki drinks" />
+		<meta name="author" content="The Krauss Haus" />
+		<meta name="robots" content="index, follow" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://thekrausshaus.com/" />
+		<meta property="og:image" content="https://thekrausshaus.com/images/open-graph/og-root.jpg" />
+		<meta property="og:site_name" content="The Krauss Haus" />
+		<meta property="og:locale" content="en_US" />
+
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:url" content="https://thekrausshaus.com/" />
+		<meta name="twitter:image" content="https://thekrausshaus.com/images/og-image.jpg" />
+		<meta name="twitter:creator" content="@thecodeboss" />
+
+		<!-- Favicon -->
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="192x192"
+			href="/images/favicon/web-app-manifest-192x192.png"
+		/>
+		<link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
+		<link rel="shortcut icon" href="/images/favicon/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
+		<meta name="apple-mobile-web-app-title" content="Krauss Haus" />
+		<link rel="manifest" href="/images/favicon/site.webmanifest" />
+
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
